--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "repository":"https://github.com/mackadelic/vue-test.git",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node server.js"
   },
+  "main": "server.js",
   "dependencies": {
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
