--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "repository":"https://github.com/mackadelic/vue-test.git",
   "scripts": {
-    "start": "node server.js"
+    "start": "webpack -p & node server.js"
   },
   "main": "server.js",
   "dependencies": {
