--- a/.openshift/action_hooks/build
+++ b/.openshift/action_hooks/build
@@ -2,5 +2,5 @@
 OLD_HOME=$HOME
 export HOME=$OPENSHIFT_REPO_DIR
 echo "TESTE -> " + $HOME
-cd "${OPENSHIFT_REPO_DIR}"; node_modules/.bin/webpack -p
+cd "${OPENSHIFT_REPO_DIR}"; node_modules/.bin/webpack.cmd -p
 export HOME=$OLD_HOME
