changed package json

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "sequelize-cli": "^2.1.0",
     "serve-favicon": "~2.3.0",
     "vue-resource": "^0.7.0",
-    "vue-router": "^0.7.13"
+    "vue-router": "^0.7.13",
+    "webpack": "^1.12.11"
   },
   "devDependencies": {
     "babel-core": "^6.4.0",
@@ -33,7 +34,6 @@
     "file-loader": "^0.8.5",
     "json-loader": "^0.5.4",
     "vue-html-loader": "^1.1.0",
-    "vue-loader": "^8.0.2",
-    "webpack": "^1.12.11"
+    "vue-loader": "^8.0.2"
   }
 }
