--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "serve-favicon": "~2.3.0",
     "vue-resource": "^0.7.0",
     "vue-router": "^0.7.13",
-    "webpack": "^1.12.11"
+    "webpack": "^1.12.11",
+    "copy-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.8.5",
+    "json-loader": "^0.5.4"
   },
   "devDependencies": {
     "babel-core": "^6.4.0",
@@ -29,10 +32,7 @@
     "babel-plugin-transform-runtime": "^6.4.0",
     "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
-    "babel-runtime": "^6.3.19",
-    "copy-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.8.5",
-    "json-loader": "^0.5.4",
+    "babel-runtime": "^6.3.19",    
     "vue-html-loader": "^1.1.0",
     "vue-loader": "^8.0.2"
   }
