--- a/package.json
+++ b/package.json
@@ -21,12 +21,11 @@
     "serve-favicon": "~2.3.0",
     "vue-resource": "^0.7.0",
     "vue-router": "^0.7.13",
+
     "webpack": "^1.12.11",
     "copy-webpack-plugin": "^3.0.0",
     "file-loader": "^0.8.5",
-    "json-loader": "^0.5.4"
-  },
-  "devDependencies": {
+    "json-loader": "^0.5.4",
     "babel-core": "^6.4.0",
     "babel-loader": "^6.2.1",
     "babel-plugin-transform-runtime": "^6.4.0",
