--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "sequelize-cli": "^2.1.0",
     "serve-favicon": "~2.3.0",
     "vue-resource": "^0.7.0",
-    "vue-router": "^0.7.13",
-
+    "vue-router": "^0.7.13"
+  },"devDependencies":{
     "bower":"^1.7.9",
     "webpack": "^1.12.11",
     "copy-webpack-plugin": "^3.0.0",
